! fix #3153 IE (and others) wrongly align BBC links

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -876,7 +876,7 @@ a.bbc_link {
 	display: inline-block;
 	overflow: hidden;
 	max-width: 100%;
-	vertical-align: middle;
+	vertical-align: top;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	word-wrap: normal;
